// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OTUIssues /> renders correctly with issues 1`] = `
<Alert
  bsClass="alert"
  bsStyle="danger"
  className="clearfix"
  closeLabel="Close alert"
>
  <h5>
    <strong>
      There are some issues that must be resolved before this OTU can be included in the next index build
    </strong>
  </h5>
  <ul>
    <li
      key="emptyOTU"
    >
      There are no isolates associated with this OTU
    </li>
    <li
      key="isolateInconsistency"
    >
      Some isolates have different numbers of sequences than other isolates
    </li>
    <li
      key="emptyIsolate"
    >
      There are no sequences associated with the following isolates:
      <ul>
        <li
          key="0"
        >
          Isolate test
        </li>
      </ul>
    </li>
    <li
      key="emptySequence"
    >
      There are sequence records with undefined 
      <code>
        sequence
      </code>
       fields:
      <ul>
        <li
          key="0"
        >
          <span>
            <em>
              test-sequence
            </em>
             in isolate 
            <em>
              Isolate test
            </em>
          </span>
        </li>
      </ul>
    </li>
  </ul>
</Alert>
`;

exports[`<OTUIssues /> renders correctly without issues 1`] = `
<Alert
  bsClass="alert"
  bsStyle="danger"
  className="clearfix"
  closeLabel="Close alert"
>
  <h5>
    <strong>
      There are some issues that must be resolved before this OTU can be included in the next index build
    </strong>
  </h5>
  <ul />
</Alert>
`;
